--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -1,5 +1,5 @@
 services:
-  App\Bundle\EventSubscriber\ExceptionSubscriber:
+  ApacheBorys\Retry\SymfonyBridge\EventSubscriber\ExceptionRetrySubscriber:
     arguments:
       - '@ApacheBorys\Retry\ExceptionHandler'
     tags:
